--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
-.board {
+.board-container {
+  width: 100%;
+
   display: flex;
-  flex-direction: column;
-}
-
-.board .row {
-  display: flex;
-}
-
-.board .row .cell {
-  width: 30px;
-  height: 30px;
-  border: 1px solid black;
-}
-
-.board .row .cell.active {
-  border: 2px solid green;
+  justify-content: center;
 }
